13# fix issue for configuration change

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,7 +27,7 @@
             android:name="title"
             app:argType="string" />
     </fragment>
-    <fragment
+    <dialog
         android:id="@+id/deleteAllTasksDialog"
         android:name="com.demo.todolist.presentation.deleteDialog.DeleteAllTasksDialog"
         android:label="DeleteAllTasksDialog" />
